--- a/paper/submission/prab.tex
+++ b/paper/submission/prab.tex
@@ -135,7 +135,7 @@ components in the beamlines, which enables different, often novel,
 accelerator research experiments to take place.  Not only do the
 physical machine components change, the beam characteristics also vary
 considerably to meet different needs.  The facility operates at both low
-and high charge (up to 100 nC), and at high charge strong nonlinearities
+and high charge (up to \SI{100}{nC}), and at high charge strong nonlinearities
 require a full 3D space charge approach in simulations.  
 Finding optics solutions in this regime, especially when
 there are additional constraints such as the small aperture two-beam
