--- a/paper/submission/theor-experiment.tex
+++ b/paper/submission/theor-experiment.tex
@@ -301,7 +301,7 @@ The first four objectives, parameters (\ref{eq:awa:p1}) to (\ref{eq:awa:p2}),
 minimize the transverse ($rms_{x,y}$) beam size and transverse momentum ($rms_{px,py}$)
 at the location of interest in the beam line ($s_3$, see Fig.~\ref{awa-tba}). 
 Minimizing the beam size at this location is essential to 
-to preventing loss of particles by scraping; 
+preventing loss of particles by scraping; 
 which ensures better transmission through the wakefield structures downstream.
 These structures are called Power Extractor and Transfer Structure (PETS), 
 and will be located after the septum and quadrupoles in Fig.~\ref{awa-tba}.
