Linda's last edits

--- a/paper/submission/prab.tex
+++ b/paper/submission/prab.tex
@@ -155,7 +155,7 @@ parallel, and fully 3D.
 \includegraphics[width=0.5\textwidth]{opt-framework_code}
 \caption{Multi-objective framework: the pilot (master) solves the
 	optimization problem specified in the input file by coordinating optimizer
-	algorithms and workers running forward solves.}
+	algorithms and workers running a forward solver.}
 \label{fig:framenetwork}
 \end{figure}
 
