--- a/paper/submission/theor-experiment.tex
+++ b/paper/submission/theor-experiment.tex
@@ -94,7 +94,7 @@ wakefield structures located downstream.
 In an attempt to maximize charge transmission in upcoming experiments,
 magnet strengths of the solenoids and quadrupoles leading into the 
 TBA section of the beam line were optimized, shown in Fig.~\ref{awa-tba}.
-The simulation model includes from the gun to the septum.
+The simulation model includes all elements from the gun to the septum.
 The optimization location is chosen as the  
 entrance to the first quadrupole on the dog leg ($s_3$), see Fig.~\ref{awa-tba}.
 Minimizing beam sizes here will enable capture and further focusing before space charge effects dominate the beam. 
@@ -209,7 +209,7 @@ as shown in Table \ref{extable}.
 \begin{center}
 \caption{Input Parameters for initial twenty-four hour AWA optimization experiments. 
 The gene mutation probability was equal to the mutation probability (not shown) in all four experiments. 
-The max number of individuals per generation was~80.}
+The maximum number of individuals per generation was~80.}
 \vspace{1em}
 \label{extable}
 \begin{tabular}{c|c|c|c}
@@ -417,7 +417,7 @@ in efficiency for achieving a good operational regime.
 	\includegraphics[width=0.65\textwidth]{xy-max-min-sigma-paper}
 	\caption{Optimized beam sizes along high charge beam line. The gun is located at $s=0$, 
 	both x and y beam sizes are shown. The black line represents the relevant beam line aperture, while
-	the green line indicates the location of the optimization.}
+	the vertical green line indicates the location of the optimization.}
 	\label{fig:stat}
 \end{figure}
 \begin{table}%[h!]
