adding bbl to main tex files

--- a/paper/submission/supplemental_material.tex
+++ b/paper/submission/supplemental_material.tex
@@ -398,7 +398,157 @@ element definitions for the AWA beam line.
 \end{verbatim}
 
 
-\bibliography{paper}
+%\bibliography{paper}
+%merlin.mbs apsrev4-1.bst 2010-07-25 4.21a (PWD, AO, DPC) hacked
+%Control: key (0)
+%Control: author (8) initials jnrlst
+%Control: editor formatted (1) identically to author
+%Control: production of article title (-1) disabled
+%Control: page (0) single
+%Control: year (1) truncated
+%Control: production of eprint (0) enabled
+\providecommand{\SortNoop}[1]{}
+\begin{thebibliography}{9}%
+	\makeatletter
+	\providecommand \@ifxundefined [1]{%
+		\@ifx{#1\undefined}
+	}%
+	\providecommand \@ifnum [1]{%
+		\ifnum #1\expandafter \@firstoftwo
+		\else \expandafter \@secondoftwo
+		\fi
+	}%
+	\providecommand \@ifx [1]{%
+		\ifx #1\expandafter \@firstoftwo
+		\else \expandafter \@secondoftwo
+		\fi
+	}%
+	\providecommand \natexlab [1]{#1}%
+	\providecommand \enquote  [1]{``#1''}%
+	\providecommand \bibnamefont  [1]{#1}%
+	\providecommand \bibfnamefont [1]{#1}%
+	\providecommand \citenamefont [1]{#1}%
+	\providecommand \href@noop [0]{\@secondoftwo}%
+	\providecommand \href [0]{\begingroup \@sanitize@url \@href}%
+	\providecommand \@href[1]{\@@startlink{#1}\@@href}%
+	\providecommand \@@href[1]{\endgroup#1\@@endlink}%
+	\providecommand \@sanitize@url [0]{\catcode `\\12\catcode `\$12\catcode
+		`\&12\catcode `\#12\catcode `\^12\catcode `\_12\catcode `\%12\relax}%
+	\providecommand \@@startlink[1]{}%
+	\providecommand \@@endlink[0]{}%
+	\providecommand \url  [0]{\begingroup\@sanitize@url \@url }%
+	\providecommand \@url [1]{\endgroup\@href {#1}{\urlprefix }}%
+	\providecommand \urlprefix  [0]{URL }%
+	\providecommand \Eprint [0]{\href }%
+	\providecommand \doibase [0]{http://dx.doi.org/}%
+	\providecommand \selectlanguage [0]{\@gobble}%
+	\providecommand \bibinfo  [0]{\@secondoftwo}%
+	\providecommand \bibfield  [0]{\@secondoftwo}%
+	\providecommand \translation [1]{[#1]}%
+	\providecommand \BibitemOpen [0]{}%
+	\providecommand \bibitemStop [0]{}%
+	\providecommand \bibitemNoStop [0]{.\EOS\space}%
+	\providecommand \EOS [0]{\spacefactor3000\relax}%
+	\providecommand \BibitemShut  [1]{\csname bibitem#1\endcsname}%
+	\let\auto@bib@innerbib\@empty
+	%</preamble>
+	\bibitem [{\citenamefont {Arbenz}\ and\ \citenamefont
+		{Chinellato}(2008)}]{ARBENZ2008381}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {P.}~\bibnamefont
+			{Arbenz}}\ and\ \bibinfo {author} {\bibfnamefont {O.}~\bibnamefont
+			{Chinellato}},\ }\href {\doibase 10.1016/j.apnum.2007.01.019} {\bibfield
+		{journal} {\bibinfo  {journal} {Appl. Numer. Math.}\ }\textbf {\bibinfo
+			{volume} {58}},\ \bibinfo {pages} {381} (\bibinfo {year} {2008})}\BibitemShut
+	{NoStop}%
+	\bibitem [{boo(2015)}]{boost}%
+	\BibitemOpen
+	\href@noop {} {\enquote {\bibinfo {title} {{The Boost Spirit Home Page}},}\ }
+	(\bibinfo {year} {2015}),\ \bibinfo {note}
+	{\url{http://boost-spirit.com/}}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {{ E. Friedman and I. Maman }}(2003)}]{boost2}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibnamefont {{ E. Friedman and I.
+					Maman }}},\ }\href@noop {} {\enquote {\bibinfo {title} {{Chapter 45.
+					Boost.Variant}},}\ } (\bibinfo {year} {2003}),\ \bibinfo {note}
+	{\url{www.boost.org/doc/html/variant.html}}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Gregor}(2004)}]{boost3}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {D.}~\bibnamefont
+			{Gregor}},\ }\href@noop {} {\enquote {\bibinfo {title} {{Chapter 15.
+					Boost.Function}},}\ } (\bibinfo {year} {2004}),\ \bibinfo {note}
+	{\url{www.boost.org/libs/function/}}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Balaji}\ \emph {et~al.}(2009)\citenamefont {Balaji},
+		\citenamefont {Chan}, \citenamefont {Thakur}, \citenamefont {Gropp},\ and\
+		\citenamefont {Lusk}}]{bctg:09}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {P.}~\bibnamefont
+			{Balaji}}, \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Chan}},
+		\bibinfo {author} {\bibfnamefont {R.}~\bibnamefont {Thakur}}, \bibinfo
+		{author} {\bibfnamefont {W.}~\bibnamefont {Gropp}}, \ and\ \bibinfo {author}
+		{\bibfnamefont {E.~L.}\ \bibnamefont {Lusk}},\ }\href {\doibase
+		http://dx.doi.org/10.1007/s00450-009-0095-3} {\bibfield  {journal} {\bibinfo
+			{journal} {Computer Science - Research and Development}\ }\textbf {\bibinfo
+			{volume} {24}},\ \bibinfo {pages} {11} (\bibinfo {year} {2009})}\BibitemShut
+	{NoStop}%
+	\bibitem [{\citenamefont {Boyd}\ \emph {et~al.}(2006)\citenamefont {Boyd},
+		\citenamefont {Ghosh}, \citenamefont {Prabhakar},\ and\ \citenamefont
+		{Shah}}]{bgps:06}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {S.}~\bibnamefont
+			{Boyd}}, \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Ghosh}},
+		\bibinfo {author} {\bibfnamefont {B.}~\bibnamefont {Prabhakar}}, \ and\
+		\bibinfo {author} {\bibfnamefont {D.}~\bibnamefont {Shah}},\ }\href@noop {}
+	{\bibfield  {journal} {\bibinfo  {journal} {IEEE Trans. Inform. Theory}\
+		}\textbf {\bibinfo {volume} {52}},\ \bibinfo {pages} {2508} (\bibinfo {year}
+		{2006})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Aysal}\ \emph {et~al.}(2009)\citenamefont {Aysal},
+		\citenamefont {Yildiz}, \citenamefont {Sarwate},\ and\ \citenamefont
+		{Scaglione}}]{ayss:09}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {T.}~\bibnamefont
+			{Aysal}}, \bibinfo {author} {\bibfnamefont {M.}~\bibnamefont {Yildiz}},
+		\bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Sarwate}}, \ and\
+		\bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Scaglione}},\ }\href@noop
+	{} {\bibfield  {journal} {\bibinfo  {journal} {IEEE Trans. Signal Process.}\
+		}\textbf {\bibinfo {volume} {57}},\ \bibinfo {pages} {2748} (\bibinfo {year}
+		{2009})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Adelmann}\ \emph {et~al.}(2018)\citenamefont
+		{Adelmann}, \citenamefont {Baumgarten}, \citenamefont {Frey}, \citenamefont
+		{Gsell}, \citenamefont {Rizzoglio}, \citenamefont {Snuverink}, \citenamefont
+		{Metzger-Kraus}, \citenamefont {Ineichen}, \citenamefont {Russell},
+		\citenamefont {Wang}, \citenamefont {Sheehy}, \citenamefont {Rogers},\ and\
+		\citenamefont {Winklehner}}]{opal}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {A.}~\bibnamefont
+			{Adelmann}}, \bibinfo {author} {\bibfnamefont {C.}~\bibnamefont
+			{Baumgarten}}, \bibinfo {author} {\bibfnamefont {M.}~\bibnamefont {Frey}},
+		\bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Gsell}}, \bibinfo
+		{author} {\bibfnamefont {V.}~\bibnamefont {Rizzoglio}}, \bibinfo {author}
+		{\bibfnamefont {J.}~\bibnamefont {Snuverink}}, \bibinfo {author}
+		{\bibfnamefont {C.}~\bibnamefont {Metzger-Kraus}}, \bibinfo {author}
+		{\bibfnamefont {Y.}~\bibnamefont {Ineichen}}, \bibinfo {author}
+		{\bibfnamefont {S.}~\bibnamefont {Russell}}, \bibinfo {author} {\bibfnamefont
+			{C.}~\bibnamefont {Wang}}, \bibinfo {author} {\bibfnamefont {S.}~\bibnamefont
+			{Sheehy}}, \bibinfo {author} {\bibfnamefont {C.}~\bibnamefont {Rogers}}, \
+		and\ \bibinfo {author} {\bibfnamefont {D.}~\bibnamefont {Winklehner}},\
+	}\href@noop {} {\emph {\bibinfo {title} {The {OPAL} (Object Oriented Parallel
+				Accelerator Library) Framework}}},\ \bibinfo {type} {Tech. Rep.}\ \bibinfo
+	{number} {PSI-PR-08-02}\ (\bibinfo  {institution} {Paul Scherrer Institut},\
+	\bibinfo {year} {2008-2018})\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Huband}\ \emph {et~al.}(2005)\citenamefont {Huband},
+		\citenamefont {Barone}, \citenamefont {While},\ and\ \citenamefont
+		{Hingston}}]{hbwh:05}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {S.}~\bibnamefont
+			{Huband}}, \bibinfo {author} {\bibfnamefont {L.}~\bibnamefont {Barone}},
+		\bibinfo {author} {\bibfnamefont {L.}~\bibnamefont {While}}, \ and\ \bibinfo
+		{author} {\bibfnamefont {P.}~\bibnamefont {Hingston}},\ }in\ \href {\doibase
+		10.1007/978-3-540-31880-4_20} {\emph {\bibinfo {booktitle} {Proc. of Intl.
+				Conf. Evol. Multi-Criterion Optimization}}}\ (\bibinfo  {publisher}
+	{Springer-Verlag},\ \bibinfo {address} {Berlin, Heidelberg},\ \bibinfo {year}
+	{2005})\ pp.\ \bibinfo {pages} {280--295}\BibitemShut {NoStop}%
+\end{thebibliography}%
 
 \end{document}
 
