--- a/paper/submission/paper.bib
+++ b/paper/submission/paper.bib
@@ -55,7 +55,7 @@ year = 2018,
 
 @article{jefferson,
 	title = {Simultaneous optimization of the cavity heat load and trip rates in linacs using a genetic algorithm},
-	author = {Terzic, Balsa and Hofler, Alicia and Reeves, Cody J. and Khan, Sabbir A. and Krafft, Geoffrey A. and Benesch, Jay and Freyberger, Arne and Ranjan, Desh},
+	author = {Terzic, Balsa and Hofler, Alicia S. and Reeves, Cody J. and Khan, Sabbir A. and Krafft, Geoffrey A. and Benesch, Jay and Freyberger, Arne and Ranjan, Desh},
 	journal = {Phys. Rev. ST Accel. Beams},
 	volume = {17},
 	issue = {10},
@@ -109,6 +109,7 @@ year = 2018,
 	doi = {10.1103/PhysRevAccelBeams.21.104601},
 	url = {https://link.aps.org/doi/10.1103/PhysRevAccelBeams.21.104601}
 }
+
 
 
 @article{hofler13,
