--- a/paper/submission/prab.tex
+++ b/paper/submission/prab.tex
@@ -431,7 +431,431 @@ The authors thank the AWA team for contributing to the
   U.S. Department of Energy, Office of Science, under 
   contract number DE-AC02-06CH11357 and grant number DE-SC0015479. 
 
-\bibliography{paper}
+%\bibliography{paper}
+
+%merlin.mbs apsrev4-1.bst 2010-07-25 4.21a (PWD, AO, DPC) hacked
+%Control: key (0)
+%Control: author (8) initials jnrlst
+%Control: editor formatted (1) identically to author
+%Control: production of article title (-1) disabled
+%Control: page (0) single
+%Control: year (1) truncated
+%Control: production of eprint (0) enabled
+\providecommand{\SortNoop}[1]{}
+\begin{thebibliography}{34}%
+	\makeatletter
+	\providecommand \@ifxundefined [1]{%
+		\@ifx{#1\undefined}
+	}%
+	\providecommand \@ifnum [1]{%
+		\ifnum #1\expandafter \@firstoftwo
+		\else \expandafter \@secondoftwo
+		\fi
+	}%
+	\providecommand \@ifx [1]{%
+		\ifx #1\expandafter \@firstoftwo
+		\else \expandafter \@secondoftwo
+		\fi
+	}%
+	\providecommand \natexlab [1]{#1}%
+	\providecommand \enquote  [1]{``#1''}%
+	\providecommand \bibnamefont  [1]{#1}%
+	\providecommand \bibfnamefont [1]{#1}%
+	\providecommand \citenamefont [1]{#1}%
+	\providecommand \href@noop [0]{\@secondoftwo}%
+	\providecommand \href [0]{\begingroup \@sanitize@url \@href}%
+	\providecommand \@href[1]{\@@startlink{#1}\@@href}%
+	\providecommand \@@href[1]{\endgroup#1\@@endlink}%
+	\providecommand \@sanitize@url [0]{\catcode `\\12\catcode `\$12\catcode
+		`\&12\catcode `\#12\catcode `\^12\catcode `\_12\catcode `\%12\relax}%
+	\providecommand \@@startlink[1]{}%
+	\providecommand \@@endlink[0]{}%
+	\providecommand \url  [0]{\begingroup\@sanitize@url \@url }%
+	\providecommand \@url [1]{\endgroup\@href {#1}{\urlprefix }}%
+	\providecommand \urlprefix  [0]{URL }%
+	\providecommand \Eprint [0]{\href }%
+	\providecommand \doibase [0]{http://dx.doi.org/}%
+	\providecommand \selectlanguage [0]{\@gobble}%
+	\providecommand \bibinfo  [0]{\@secondoftwo}%
+	\providecommand \bibfield  [0]{\@secondoftwo}%
+	\providecommand \translation [1]{[#1]}%
+	\providecommand \BibitemOpen [0]{}%
+	\providecommand \bibitemStop [0]{}%
+	\providecommand \bibitemNoStop [0]{.\EOS\space}%
+	\providecommand \EOS [0]{\spacefactor3000\relax}%
+	\providecommand \BibitemShut  [1]{\csname bibitem#1\endcsname}%
+	\let\auto@bib@innerbib\@empty
+	%</preamble>
+	\bibitem [{\citenamefont {Huang}(2018)}]{xiaobiao}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {X.}~\bibnamefont
+			{Huang}},\ }\href {\doibase 10.1103/PhysRevAccelBeams.21.104601} {\bibfield
+		{journal} {\bibinfo  {journal} {Phys. Rev. Accel. Beams}\ }\textbf {\bibinfo
+			{volume} {21}},\ \bibinfo {pages} {104601} (\bibinfo {year}
+		{2018})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Bazarov}\ and\ \citenamefont
+		{Sinclair}(2005)}]{bazarov05}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {I.~V.}\ \bibnamefont
+			{Bazarov}}\ and\ \bibinfo {author} {\bibfnamefont {C.~K.}\ \bibnamefont
+			{Sinclair}},\ }\href {\doibase 10.1103/PhysRevSTAB.8.034202} {\bibfield
+		{journal} {\bibinfo  {journal} {Phys. Rev. ST Accel. Beams}\ }\textbf
+		{\bibinfo {volume} {8}},\ \bibinfo {pages} {034202} (\bibinfo {year}
+		{2005})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Yang}\ \emph {et~al.}(2009)\citenamefont {Yang},
+		\citenamefont {Robin}, \citenamefont {Sannibale}, \citenamefont {Steier},\
+		and\ \citenamefont {Wan}}]{yrss:09}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {L.}~\bibnamefont
+			{Yang}}, \bibinfo {author} {\bibfnamefont {D.}~\bibnamefont {Robin}},
+		\bibinfo {author} {\bibfnamefont {F.}~\bibnamefont {Sannibale}}, \bibinfo
+		{author} {\bibfnamefont {C.}~\bibnamefont {Steier}}, \ and\ \bibinfo {author}
+		{\bibfnamefont {W.}~\bibnamefont {Wan}},\ }\href {\doibase
+		10.1016/j.nima.2009.08.027} {\bibfield  {journal} {\bibinfo  {journal} {Nucl.
+				Instrum. Methods Phys. Res. A}\ }\textbf {\bibinfo {volume} {609}},\ \bibinfo
+		{pages} {50} (\bibinfo {year} {2009})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Chao}\ \emph {et~al.}(2009)\citenamefont {Chao},
+		\citenamefont {Ames}, \citenamefont {Baartman}, \citenamefont {Bylinskii},
+		\citenamefont {Dechoudhury}, \citenamefont {Goh}, \citenamefont
+		{Koscielniak}, \citenamefont {E~Laxdal}, \citenamefont {Marchetto},
+		\citenamefont {Merminga}, \citenamefont {Naik}, \citenamefont {A~Verzilov},
+		\citenamefont {Yan},\ and\ \citenamefont {Zvyagintsev}}]{chao09}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {Y.}~\bibnamefont
+			{Chao}}, \bibinfo {author} {\bibfnamefont {F.}~\bibnamefont {Ames}}, \bibinfo
+		{author} {\bibfnamefont {R.}~\bibnamefont {Baartman}}, \bibinfo {author}
+		{\bibfnamefont {I.}~\bibnamefont {Bylinskii}}, \bibinfo {author}
+		{\bibfnamefont {S.}~\bibnamefont {Dechoudhury}}, \bibinfo {author}
+		{\bibfnamefont {G.}~\bibnamefont {Goh}}, \bibinfo {author} {\bibfnamefont
+			{S.}~\bibnamefont {Koscielniak}}, \bibinfo {author} {\bibfnamefont
+			{R.}~\bibnamefont {E~Laxdal}}, \bibinfo {author} {\bibfnamefont
+			{M.}~\bibnamefont {Marchetto}}, \bibinfo {author} {\bibfnamefont
+			{L.}~\bibnamefont {Merminga}}, \bibinfo {author} {\bibfnamefont
+			{V.}~\bibnamefont {Naik}}, \bibinfo {author} {\bibfnamefont {V.}~\bibnamefont
+			{A~Verzilov}}, \bibinfo {author} {\bibfnamefont {F.}~\bibnamefont {Yan}}, \
+		and\ \bibinfo {author} {\bibfnamefont {V.}~\bibnamefont {Zvyagintsev}},\ }in\
+	\href@noop {} {\emph {\bibinfo {booktitle} {Proc. of ICAP}}}\ (\bibinfo
+	{year} {2009})\ p.\ \bibinfo {pages} {THPSC012}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Gong}\ and\ \citenamefont {Chao}(2012)}]{gong12}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {C.}~\bibnamefont
+			{Gong}}\ and\ \bibinfo {author} {\bibfnamefont {Y.}~\bibnamefont {Chao}},\
+	}in\ \href@noop {} {\emph {\bibinfo {booktitle} {Proc. of ICAP}}}\ (\bibinfo
+	{year} {2012})\ p.\ \bibinfo {pages} {TUABI1}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Hofler}\ \emph {et~al.}(2013)\citenamefont {Hofler},
+		\citenamefont {Terzic}, \citenamefont {Kramer}, \citenamefont {Zvezdin},
+		\citenamefont {Morozov}, \citenamefont {Roblin}, \citenamefont {Lin},\ and\
+		\citenamefont {Jarvis}}]{hofler13}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {A.}~\bibnamefont
+			{Hofler}}, \bibinfo {author} {\bibfnamefont {B.}~\bibnamefont {Terzic}},
+		\bibinfo {author} {\bibfnamefont {M.}~\bibnamefont {Kramer}}, \bibinfo
+		{author} {\bibfnamefont {A.}~\bibnamefont {Zvezdin}}, \bibinfo {author}
+		{\bibfnamefont {V.}~\bibnamefont {Morozov}}, \bibinfo {author} {\bibfnamefont
+			{Y.}~\bibnamefont {Roblin}}, \bibinfo {author} {\bibfnamefont
+			{F.}~\bibnamefont {Lin}}, \ and\ \bibinfo {author} {\bibfnamefont
+			{C.}~\bibnamefont {Jarvis}},\ }\href {\doibase 10.1103/PhysRevSTAB.16.010101}
+	{\bibfield  {journal} {\bibinfo  {journal} {Phys. Rev. ST Accel. Beams}\
+		}\textbf {\bibinfo {volume} {16}},\ \bibinfo {pages} {010101} (\bibinfo
+		{year} {2013})}\BibitemShut {NoStop}%
+	%%CITATION = PRSTA,16,010101;%%
+	\bibitem [{\citenamefont {Terzic}\ \emph {et~al.}(2014)\citenamefont {Terzic},
+		\citenamefont {Hofler}, \citenamefont {Reeves}, \citenamefont {Khan},
+		\citenamefont {Krafft}, \citenamefont {Benesch}, \citenamefont {Freyberger},\
+		and\ \citenamefont {Ranjan}}]{jefferson}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {B.}~\bibnamefont
+			{Terzic}}, \bibinfo {author} {\bibfnamefont {A.~S.}\ \bibnamefont {Hofler}},
+		\bibinfo {author} {\bibfnamefont {C.~J.}\ \bibnamefont {Reeves}}, \bibinfo
+		{author} {\bibfnamefont {S.~A.}\ \bibnamefont {Khan}}, \bibinfo {author}
+		{\bibfnamefont {G.~A.}\ \bibnamefont {Krafft}}, \bibinfo {author}
+		{\bibfnamefont {J.}~\bibnamefont {Benesch}}, \bibinfo {author} {\bibfnamefont
+			{A.}~\bibnamefont {Freyberger}}, \ and\ \bibinfo {author} {\bibfnamefont
+			{D.}~\bibnamefont {Ranjan}},\ }\href {\doibase 10.1103/PhysRevSTAB.17.101003}
+	{\bibfield  {journal} {\bibinfo  {journal} {Phys. Rev. ST Accel. Beams}\
+		}\textbf {\bibinfo {volume} {17}},\ \bibinfo {pages} {101003} (\bibinfo
+		{year} {2014})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Gong}\ and\ \citenamefont {Chao}(2015)}]{gong15}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {C.}~\bibnamefont
+			{Gong}}\ and\ \bibinfo {author} {\bibfnamefont {Y.}~\bibnamefont {Chao}},\
+	}in\ \href@noop {} {\emph {\bibinfo {booktitle} {Proc. of ICAP}}}\ (\bibinfo
+	{year} {2015})\ p.\ \bibinfo {pages} {THCWC4}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Gong}(2015)}]{gongthesis15}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {C.}~\bibnamefont
+			{Gong}},\ }\emph {\bibinfo {title} {A Novel Optimization Platform and Its
+			Applications to the TRIUMF Energy Recovery Linac}},\ \href@noop {} {Ph.D.
+		thesis},\ \bibinfo  {school} {The University of Columbia} (\bibinfo {year}
+	{2015})\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Gulliford}\ \emph {et~al.}(2016)\citenamefont
+		{Gulliford}, \citenamefont {Bartnik},\ and\ \citenamefont {Bazarov}}]{gull1}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {C.}~\bibnamefont
+			{Gulliford}}, \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Bartnik}},
+		\ and\ \bibinfo {author} {\bibfnamefont {I.}~\bibnamefont {Bazarov}},\ }\href
+	{\doibase 10.1103/PhysRevAccelBeams.19.093402} {\bibfield  {journal}
+		{\bibinfo  {journal} {Phys. Rev. Accel. Beams}\ }\textbf {\bibinfo {volume}
+			{19}},\ \bibinfo {pages} {093402} (\bibinfo {year} {2016})}\BibitemShut
+	{NoStop}%
+	\bibitem [{\citenamefont {Gulliford}\ \emph {et~al.}(2017)\citenamefont
+		{Gulliford}, \citenamefont {Bartnik}, \citenamefont {Bazarov},\ and\
+		\citenamefont {Maxson}}]{gull2}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {C.}~\bibnamefont
+			{Gulliford}}, \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Bartnik}},
+		\bibinfo {author} {\bibfnamefont {I.}~\bibnamefont {Bazarov}}, \ and\
+		\bibinfo {author} {\bibfnamefont {J.}~\bibnamefont {Maxson}},\ }\href
+	{\doibase 10.1103/PhysRevAccelBeams.20.033401} {\bibfield  {journal}
+		{\bibinfo  {journal} {Phys. Rev. Accel. Beams}\ }\textbf {\bibinfo {volume}
+			{20}},\ \bibinfo {pages} {033401} (\bibinfo {year} {2017})}\BibitemShut
+	{NoStop}%
+	\bibitem [{\citenamefont {Kranjčević}\ \emph {et~al.}(2019)\citenamefont
+		{Kranjčević}, \citenamefont {Adelmann}, \citenamefont {Arbenz},
+		\citenamefont {Citterio},\ and\ \citenamefont {Stingelin}}]{marija}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {M.}~\bibnamefont
+			{Kranjčević}}, \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont
+			{Adelmann}}, \bibinfo {author} {\bibfnamefont {P.}~\bibnamefont {Arbenz}},
+		\bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Citterio}}, \ and\
+		\bibinfo {author} {\bibfnamefont {L.}~\bibnamefont {Stingelin}},\ }\href
+	{\doibase https://doi.org/10.1016/j.nima.2018.12.066} {\bibfield  {journal}
+		{\bibinfo  {journal} {Nucl. Instrum. Methods Phys. Res. A}\ }\textbf
+		{\bibinfo {volume} {920}},\ \bibinfo {pages} {106 } (\bibinfo {year}
+		{2019})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Physics}(2018)}]{gpt}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {P.}~\bibnamefont
+			{Physics}},\ }\href@noop {} {\enquote {\bibinfo {title} {{General Particle
+					Tracer (GPT)}},}\ } (\bibinfo {year} {1996-2018}),\ \Eprint
+	{http://arxiv.org/abs/\url{http://www.pulsar.nl/gpt}}
+	{\url{http://www.pulsar.nl/gpt}} \BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Borland}(2018)}]{elegant}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {M.}~\bibnamefont
+			{Borland}},\ }\href@noop {} {\emph {\bibinfo {title} {Elegant: A flexible
+				SDDS-compliant code for accelerator simulation}}},\ \bibinfo {type} {Tech.
+		Rep.}\ \bibinfo {number} {LS-287}\ (\bibinfo  {institution} {Argonne National
+		Laboratory},\ \bibinfo {year} {2000-2018})\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Adelmann}\ \emph {et~al.}(2018)\citenamefont
+		{Adelmann}, \citenamefont {Baumgarten}, \citenamefont {Frey}, \citenamefont
+		{Gsell}, \citenamefont {Rizzoglio}, \citenamefont {Snuverink}, \citenamefont
+		{Metzger-Kraus}, \citenamefont {Ineichen}, \citenamefont {Russell},
+		\citenamefont {Wang}, \citenamefont {Sheehy}, \citenamefont {Rogers},\ and\
+		\citenamefont {Winklehner}}]{opal}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {A.}~\bibnamefont
+			{Adelmann}}, \bibinfo {author} {\bibfnamefont {C.}~\bibnamefont
+			{Baumgarten}}, \bibinfo {author} {\bibfnamefont {M.}~\bibnamefont {Frey}},
+		\bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Gsell}}, \bibinfo
+		{author} {\bibfnamefont {V.}~\bibnamefont {Rizzoglio}}, \bibinfo {author}
+		{\bibfnamefont {J.}~\bibnamefont {Snuverink}}, \bibinfo {author}
+		{\bibfnamefont {C.}~\bibnamefont {Metzger-Kraus}}, \bibinfo {author}
+		{\bibfnamefont {Y.}~\bibnamefont {Ineichen}}, \bibinfo {author}
+		{\bibfnamefont {S.}~\bibnamefont {Russell}}, \bibinfo {author} {\bibfnamefont
+			{C.}~\bibnamefont {Wang}}, \bibinfo {author} {\bibfnamefont {S.}~\bibnamefont
+			{Sheehy}}, \bibinfo {author} {\bibfnamefont {C.}~\bibnamefont {Rogers}}, \
+		and\ \bibinfo {author} {\bibfnamefont {D.}~\bibnamefont {Winklehner}},\
+	}\href@noop {} {\emph {\bibinfo {title} {The {OPAL} (Object Oriented Parallel
+				Accelerator Library) Framework}}},\ \bibinfo {type} {Tech. Rep.}\ \bibinfo
+	{number} {PSI-PR-08-02}\ (\bibinfo  {institution} {Paul Scherrer Institut},\
+	\bibinfo {year} {2008-2018})\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Deb}\ \emph {et~al.}(2002)\citenamefont {Deb},
+		\citenamefont {Pratap}, \citenamefont {Agarwal},\ and\ \citenamefont
+		{Meyarivan}}]{dpam:02}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {K.}~\bibnamefont
+			{Deb}}, \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Pratap}},
+		\bibinfo {author} {\bibfnamefont {S.}~\bibnamefont {Agarwal}}, \ and\
+		\bibinfo {author} {\bibfnamefont {T.}~\bibnamefont {Meyarivan}},\ }\href
+	{\doibase 10.1109/4235.996017} {\bibfield  {journal} {\bibinfo  {journal}
+			{IEEE Trans. Evol. Comp.}\ }\textbf {\bibinfo {volume} {6}},\ \bibinfo
+		{pages} {182} (\bibinfo {year} {2002})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Bleuler}\ \emph {et~al.}(2003)\citenamefont
+		{Bleuler}, \citenamefont {Laumanns}, \citenamefont {Thiele},\ and\
+		\citenamefont {Zitzler}}]{pisa}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {S.}~\bibnamefont
+			{Bleuler}}, \bibinfo {author} {\bibfnamefont {M.}~\bibnamefont {Laumanns}},
+		\bibinfo {author} {\bibfnamefont {L.}~\bibnamefont {Thiele}}, \ and\ \bibinfo
+		{author} {\bibfnamefont {E.}~\bibnamefont {Zitzler}},\ }in\ \href@noop {}
+	{\emph {\bibinfo {booktitle} {{E}volutionary {M}ulti-{C}riterion
+				{O}ptimization}}},\ \bibinfo {editor} {edited by\ \bibinfo {editor}
+		{\bibfnamefont {C.~M.}\ \bibnamefont {Fonseca}}, \bibinfo {editor}
+		{\bibfnamefont {P.~J.}\ \bibnamefont {Fleming}}, \bibinfo {editor}
+		{\bibfnamefont {E.}~\bibnamefont {Zitzler}}, \bibinfo {editor} {\bibfnamefont
+			{L.}~\bibnamefont {Thiele}}, \ and\ \bibinfo {editor} {\bibfnamefont
+			{K.}~\bibnamefont {Deb}}}\ (\bibinfo  {publisher} {Springer},\ \bibinfo
+	{address} {Berlin, Heidelberg},\ \bibinfo {year} {2003})\ pp.\ \bibinfo
+	{pages} {494--508}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Deb}(2009)}]{deb:09}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {K.}~\bibnamefont
+			{Deb}},\ }\href@noop {} {\emph {\bibinfo {title} {{M}ulti-{O}bjective
+				{O}ptimization {U}sing {E}volutionary {A}lgorithms}}}\ (\bibinfo  {publisher}
+	{Wiley},\ \bibinfo {year} {2009})\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Kirkpatrick}\ \emph {et~al.}(1983)\citenamefont
+		{Kirkpatrick}, \citenamefont {Gelatt},\ and\ \citenamefont
+		{Vecchi}}]{kigv:83}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {S.}~\bibnamefont
+			{Kirkpatrick}}, \bibinfo {author} {\bibfnamefont {C.~D.}\ \bibnamefont
+			{Gelatt}}, \ and\ \bibinfo {author} {\bibfnamefont {M.~P.}\ \bibnamefont
+			{Vecchi}},\ }\href {\doibase 10.1126/science.220.4598.671} {\bibfield
+		{journal} {\bibinfo  {journal} {Science}\ }\textbf {\bibinfo {volume}
+			{220}},\ \bibinfo {pages} {671} (\bibinfo {year} {1983})}\BibitemShut
+	{NoStop}%
+	\bibitem [{\citenamefont {Kennedy}\ and\ \citenamefont
+		{Eberhart}(1995)}]{keeb:95}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {J.}~\bibnamefont
+			{Kennedy}}\ and\ \bibinfo {author} {\bibfnamefont {R.}~\bibnamefont
+			{Eberhart}},\ }in\ \href {\doibase 10.1109/ICNN.1995.488968} {\emph {\bibinfo
+			{booktitle} {Proc. of ICNN}}},\ Vol.~\bibinfo {volume} {4}\ (\bibinfo {year}
+	{1995})\ pp.\ \bibinfo {pages} {1942--1948}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Dorigo}\ \emph {et~al.}(1996)\citenamefont {Dorigo},
+		\citenamefont {Maniezzo},\ and\ \citenamefont {Colorni}}]{domc:96}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {M.}~\bibnamefont
+			{Dorigo}}, \bibinfo {author} {\bibfnamefont {V.}~\bibnamefont {Maniezzo}}, \
+		and\ \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Colorni}},\
+	}\href@noop {} {\bibfield  {journal} {\bibinfo  {journal} {IEEE Trans. Syst.
+				Man. Cy. B}\ }\textbf {\bibinfo {volume} {26}},\ \bibinfo {pages} {29}
+		(\bibinfo {year} {1996})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {De~Castro}\ and\ \citenamefont
+		{Timmis}(2002)}]{cati:02}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {L.}~\bibnamefont
+			{De~Castro}}\ and\ \bibinfo {author} {\bibfnamefont {J.}~\bibnamefont
+			{Timmis}},\ }\href@noop {} {\emph {\bibinfo {title} {Artificial immune
+				systems: a new computational intelligence approach}}}\ (\bibinfo  {publisher}
+	{Springer},\ \bibinfo {year} {2002})\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Karaboga}(2005)}]{kara:05}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {D.}~\bibnamefont
+			{Karaboga}},\ }\href@noop {} {\bibfield  {journal} {\bibinfo  {journal}
+			{Techn. Rep. TR06, Erciyes Univ. Press, Erciyes}\ } (\bibinfo {year}
+		{2005})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Shah-Hosseini}(2009)}]{hoss:09}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {H.}~\bibnamefont
+			{Shah-Hosseini}},\ }\href@noop {} {\bibfield  {journal} {\bibinfo  {journal}
+			{Int. J. Bio-Inspir. Com.}\ }\textbf {\bibinfo {volume} {1}},\ \bibinfo
+		{pages} {71} (\bibinfo {year} {2009})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Durillo}\ \emph {et~al.}(2006)\citenamefont
+		{Durillo}, \citenamefont {Nebro}, \citenamefont {Luna}, \citenamefont
+		{Dorronsoro},\ and\ \citenamefont {Alba}}]{dnld:06}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {J.}~\bibnamefont
+			{Durillo}}, \bibinfo {author} {\bibfnamefont {A.}~\bibnamefont {Nebro}},
+		\bibinfo {author} {\bibfnamefont {F.}~\bibnamefont {Luna}}, \bibinfo {author}
+		{\bibfnamefont {B.}~\bibnamefont {Dorronsoro}}, \ and\ \bibinfo {author}
+		{\bibfnamefont {E.}~\bibnamefont {Alba}},\ }\href@noop {} {\emph {\bibinfo
+			{title} {jMetal: a java framework for developing multi-objective optimization
+				metaheuristics}}},\ \bibinfo {type} {Tech. Rep.}\ \bibinfo {number}
+	{ITI-2006-10}\ (\bibinfo  {institution} {University of M{\'a}laga, ETSI
+		Inform{\'a}tica, Campus de Teatinos},\ \bibinfo {year} {2006})\BibitemShut
+	{NoStop}%
+	\bibitem [{\citenamefont {Liefooghe}\ \emph {et~al.}(2007)\citenamefont
+		{Liefooghe}, \citenamefont {Basseur}, \citenamefont {Jourdan},\ and\
+		\citenamefont {Talbi}}]{lbjt:07}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {A.}~\bibnamefont
+			{Liefooghe}}, \bibinfo {author} {\bibfnamefont {M.}~\bibnamefont {Basseur}},
+		\bibinfo {author} {\bibfnamefont {L.}~\bibnamefont {Jourdan}}, \ and\
+		\bibinfo {author} {\bibfnamefont {E.}~\bibnamefont {Talbi}},\ }in\ \href@noop
+	{} {\emph {\bibinfo {booktitle} {Evolutionary Multi-Criterion
+				Optimization}}}\ (\bibinfo {organization} {Springer},\ \bibinfo {year}
+	{2007})\ pp.\ \bibinfo {pages} {386--400}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Filipi\v{c}}\ and\ \citenamefont
+		{Depolli}(2009)}]{fide:09}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {B.}~\bibnamefont
+			{Filipi\v{c}}}\ and\ \bibinfo {author} {\bibfnamefont {M.}~\bibnamefont
+			{Depolli}},\ }in\ \href {\doibase 10.1007/978-1-84882-409-6\_7} {\emph
+		{\bibinfo {booktitle} {Parallel Computing}}},\ \bibinfo {editor} {edited by\
+		\bibinfo {editor} {\bibfnamefont {R.}~\bibnamefont {Trobec}}, \bibinfo
+		{editor} {\bibfnamefont {M.}~\bibnamefont {Vajter\v{s}ic}}, \ and\ \bibinfo
+		{editor} {\bibfnamefont {P.}~\bibnamefont {Zinterhof}}}\ (\bibinfo
+	{publisher} {Springer},\ \bibinfo {year} {2009})\ pp.\ \bibinfo {pages}
+	{217--240}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Le\'{o}n}\ \emph {et~al.}(2009)\citenamefont
+		{Le\'{o}n}, \citenamefont {Miranda},\ and\ \citenamefont {Segura}}]{lems:09}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {C.}~\bibnamefont
+			{Le\'{o}n}}, \bibinfo {author} {\bibfnamefont {G.}~\bibnamefont {Miranda}}, \
+		and\ \bibinfo {author} {\bibfnamefont {C.}~\bibnamefont {Segura}},\ }\href
+	{\doibase 10.1142/S0218213009000275} {\bibfield  {journal} {\bibinfo
+			{journal} {Int. J. Artif. Intell. Tools}\ }\textbf {\bibinfo {volume} {18}},\
+		\bibinfo {pages} {569} (\bibinfo {year} {2009})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Huband}\ \emph {et~al.}(2005)\citenamefont {Huband},
+		\citenamefont {Barone}, \citenamefont {While},\ and\ \citenamefont
+		{Hingston}}]{hbwh:05}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {S.}~\bibnamefont
+			{Huband}}, \bibinfo {author} {\bibfnamefont {L.}~\bibnamefont {Barone}},
+		\bibinfo {author} {\bibfnamefont {L.}~\bibnamefont {While}}, \ and\ \bibinfo
+		{author} {\bibfnamefont {P.}~\bibnamefont {Hingston}},\ }in\ \href {\doibase
+		10.1007/978-3-540-31880-4_20} {\emph {\bibinfo {booktitle} {Proc. of Intl.
+				Conf. Evol. Multi-Criterion Optimization}}}\ (\bibinfo  {publisher}
+	{Springer-Verlag},\ \bibinfo {address} {Berlin, Heidelberg},\ \bibinfo {year}
+	{2005})\ pp.\ \bibinfo {pages} {280--295}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {While}\ \emph {et~al.}(2012)\citenamefont {While},
+		\citenamefont {Bradstreet},\ and\ \citenamefont {Barone}}]{whbb:12}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {L.}~\bibnamefont
+			{While}}, \bibinfo {author} {\bibfnamefont {L.}~\bibnamefont {Bradstreet}}, \
+		and\ \bibinfo {author} {\bibfnamefont {L.}~\bibnamefont {Barone}},\
+	}\href@noop {} {\bibfield  {journal} {\bibinfo  {journal} {IEEE Trans. Evol.
+				Comput.}\ }\textbf {\bibinfo {volume} {16}},\ \bibinfo {pages} {86} (\bibinfo
+		{year} {2012})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Gai}\ \emph {et~al.}(2012)\citenamefont {Gai},
+		\citenamefont {Power},\ and\ \citenamefont {Jing}}]{gai_power_jing_2012}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {W.}~\bibnamefont
+			{Gai}}, \bibinfo {author} {\bibfnamefont {J.~G.}\ \bibnamefont {Power}}, \
+		and\ \bibinfo {author} {\bibfnamefont {C.}~\bibnamefont {Jing}},\ }\href
+	{\doibase 10.1017/S0022377812000037} {\bibfield  {journal} {\bibinfo
+			{journal} {Journal of Plasma Physics}\ }\textbf {\bibinfo {volume} {78}},\
+		\bibinfo {pages} {339–345} (\bibinfo {year} {2012})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Jing}\ \emph {et~al.}(2018)\citenamefont {Jing} \emph
+		{et~al.}}]{JING201872}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {C.}~\bibnamefont
+			{Jing}} \emph {et~al.},\ }\href {\doibase
+		https://doi.org/10.1016/j.nima.2018.05.007} {\bibfield  {journal} {\bibinfo
+			{journal} {Nucl. Instrum. Methods Phys. Res. A}\ }\textbf {\bibinfo {volume}
+			{898}},\ \bibinfo {pages} {72 } (\bibinfo {year} {2018})}\BibitemShut
+	{NoStop}%
+	\bibitem [{\citenamefont {Gao}\ \emph {et~al.}(2008)\citenamefont {Gao},
+		\citenamefont {Conde}, \citenamefont {Gai}, \citenamefont {Jing},
+		\citenamefont {Konecny}, \citenamefont {Liu}, \citenamefont {Power},
+		\citenamefont {Wong},\ and\ \citenamefont {Yusof}}]{PETSeq}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {F.}~\bibnamefont
+			{Gao}}, \bibinfo {author} {\bibfnamefont {M.~E.}\ \bibnamefont {Conde}},
+		\bibinfo {author} {\bibfnamefont {W.}~\bibnamefont {Gai}}, \bibinfo {author}
+		{\bibfnamefont {C.}~\bibnamefont {Jing}}, \bibinfo {author} {\bibfnamefont
+			{R.}~\bibnamefont {Konecny}}, \bibinfo {author} {\bibfnamefont
+			{W.}~\bibnamefont {Liu}}, \bibinfo {author} {\bibfnamefont {J.~G.}\
+			\bibnamefont {Power}}, \bibinfo {author} {\bibfnamefont {T.}~\bibnamefont
+			{Wong}}, \ and\ \bibinfo {author} {\bibfnamefont {Z.}~\bibnamefont {Yusof}},\
+	}\href {\doibase 10.1103/PhysRevSTAB.11.041301} {\bibfield  {journal}
+		{\bibinfo  {journal} {Phys. Rev. ST Accel. Beams}\ }\textbf {\bibinfo
+			{volume} {11}},\ \bibinfo {pages} {041301} (\bibinfo {year}
+		{2008})}\BibitemShut {NoStop}%
+	\bibitem [{\citenamefont {Neveu}(2018)}]{neveuthesis}%
+	\BibitemOpen
+	\bibfield  {author} {\bibinfo {author} {\bibfnamefont {N.}~\bibnamefont
+			{Neveu}},\ }\emph {\bibinfo {title} {Beam Line Design for Fully Staged Two
+			Beam Acceleration at the Argonne Wakefield Accelerator Facility}},\
+	\href@noop {} {Ph.D. thesis},\ \bibinfo  {school} {Illinois Institute of
+		Technology} (\bibinfo {year} {2018})\BibitemShut {NoStop}%
+\end{thebibliography}%
+
+
+
+
 
 \end{document}
 
